feat: 前端推荐热门歌单推荐

--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@better-scroll/core": "^2.5.0",
+    "@better-scroll/observe-dom": "^2.5.0",
     "@better-scroll/slide": "^2.5.0",
     "axios": "^1.2.3",
     "pinia": "^2.0.28",
