--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
     "pinia": "^2.0.28",
     "sass": "^1.57.1",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-lazy": "1.0.0-alpha.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
